# NES-Emulator

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  test_output.txt
roms/: sources.txt
src/: error.rs  main.rs
src/cartridge/: mod.rs  nrom.rs
src/cpu/: debug.rs  instructions.rs  interrupt_handler.rs  mod.rs  registers.rs
src/memory/: controller.rs  mapper.rs  mod.rs
src/memory/mapper/: mapper0.rs  mapper1.rs
src/system/: mod.rs
