[package]
name = "nes-emulator"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tudelft-nes-ppu = "2"
tudelft-nes-test = "2"
env_logger = "0.10"
log = "0.4"
thiserror = "1"

[profile.dev]
opt-level=1
debug = true

[profile.release]
opt-level=3
lto = true
debug = true
